@@ -1,17 +1,10 @@
-FROM maven:3.5-jdk-8-alpine AS build
+FROM microsoft/dotnet:2.0.0-sdk
 
 WORKDIR /code
 
-COPY pom.xml /code/pom.xml
-RUN ["mvn", "dependency:resolve"]
-RUN ["mvn", "verify"]
+ADD src/Worker /code/src/Worker
 
-# Adding source, compile and package into a fat jar
-COPY ["src/main", "/code/src/main"]
-RUN ["mvn", "package"]
+RUN dotnet restore -v minimal src/Worker \
+    && dotnet publish -c Release -o "./" "src/Worker/" 
 
-FROM openjdk:8-jre-alpine
-
-COPY --from=build /code/target/worker-jar-with-dependencies.jar /
-
-CMD ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar", "/worker-jar-with-dependencies.jar"]
+CMD dotnet src/Worker/Worker.dll
